# RadarReader

./: CMakeLists.txt  README.md  icon.qrc  icon.rc  images.qrc  json.qrc  main.cpp  qmls.qrc  resc.qrc  settings.json  startup.cpp  startup.h  utils.cpp  utils.h
Model/: connector.cpp  connector.h  instrument.cpp  instrument.h  provider.cpp  provider.h  settings.cpp  settings.h
ViewManager/: mainviewmanager.cpp  mainviewmanager.h
qml/: Feedback.qml  Header.qml  Knob.qml  KnobControl.qml  Main.qml  PresetButton.qml  RfPower.qml
